fix nav bug on smaller screens

--- a/src/components/molecules/Navigation/Navigation.module.scss
+++ b/src/components/molecules/Navigation/Navigation.module.scss
@@ -137,7 +137,6 @@ nav {
     .dropdown {
       flex-direction: column;
       text-align: left;
-      overflow-y: scroll;
     }
 
     .nav_cont {
@@ -161,7 +160,7 @@ nav {
 
       li {
         display: block;
-        font-size: 1rem;
+        font-size: 0.8rem;
         padding: 1rem;
         padding-left: 1rem !important;
         color: #fff !important;
@@ -175,7 +174,7 @@ nav {
           .homeIconSmall {
             display: block;
             margin-right: 0rem;
-            margin-top: -4rem;
+            margin-top: -6rem;
             width: 1.5rem;
             height: 1.5rem;
           }
